--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -4,13 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F3F4F6">
+    android:background="#F9F5F6">
 
-    <!-- Top bar -->
+    <!-- TOP BAR -->
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/bg_main_gradient"
+        android:background="#F2BED1"
         app:elevation="0dp">
 
         <androidx.appcompat.widget.Toolbar
@@ -19,12 +19,13 @@
             android:layout_height="?attr/actionBarSize"
             android:paddingStart="12dp"
             android:paddingEnd="12dp"
+            android:background="#F2BED1"
             app:navigationIcon="@android:drawable/ic_media_previous"
             app:title="Treninzi"
-            app:titleTextColor="@android:color/white" />
+            app:titleTextColor="@android:color/white"/>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <!-- Content -->
+    <!-- CONTENT -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -34,7 +35,7 @@
             android:id="@+id/recyclerView"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:padding="12dp"
+            android:padding="16dp"
             android:clipToPadding="false"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -51,14 +52,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
 
+        <!-- FAB -->
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fabAddTraining"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="18dp"
+            android:layout_margin="20dp"
             android:src="@android:drawable/ic_input_add"
             android:contentDescription="Add Training"
-            app:backgroundTint="#2563EB"
+            app:backgroundTint="#F2BED1"
             app:tint="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
