--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,53 +3,43 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <!-- BACKGROUND IMAGE -->
-    <ImageView
-        android:id="@+id/bgImage"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:src="@drawable/pocetna2"
-        android:scaleType="centerCrop"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <!-- DARK OVERLAY (da se tekst vidi) -->
-    <View
-        android:id="@+id/overlay"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="#99000000"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+    android:layout_height="match_parent"
+    android:background="#F9F5F6">
 
     <!-- CONTENT -->
     <LinearLayout
         android:id="@+id/content"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
         android:orientation="vertical"
         android:padding="24dp"
+        android:gravity="center_horizontal"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
+        <!-- LOGO -->
+        <ImageView
+            android:id="@+id/logoImage"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:src="@drawable/logo"
+            android:adjustViewBounds="true"
+            android:layout_marginBottom="32dp"/>
+
+        <!-- SUBTITLE -->
         <TextView
             android:id="@+id/tvSubtitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Planiranje treninga i evidencija ekipe"
-            android:textColor="@android:color/white"
+            android:textColor="#000000"
             android:textSize="16sp"
             android:gravity="center"
-            android:layout_marginBottom="28dp"/>
+            android:layout_marginBottom="32dp"/>
 
+        <!-- LOGIN -->
         <Button
             android:id="@+id/btnLogin"
             android:layout_width="match_parent"
@@ -58,10 +48,10 @@
             android:textAllCaps="true"
             android:textStyle="bold"
             android:textColor="@android:color/white"
-            android:background="@drawable/btn_primary_rounded"
-            android:backgroundTint="@null"
+            android:backgroundTint="#F2BED1"
             android:layout_marginBottom="14dp"/>
 
+        <!-- SIGN UP -->
         <Button
             android:id="@+id/goToRegisterBtn"
             android:layout_width="match_parent"
@@ -70,9 +60,7 @@
             android:textAllCaps="true"
             android:textStyle="bold"
             android:textColor="@android:color/white"
-            android:background="@drawable/btn_secondary_rounded"
-            android:backgroundTint="@null"/>
-
+            android:backgroundTint="#F2BED1"/>
 
     </LinearLayout>
 
